--- a/index.html
+++ b/index.html
@@ -8,10 +8,28 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <!-- connected stylesheet -->
     <link rel="stylesheet" href="style.css">
-    <title>My Project</title>
+    <title>Expading Cards</title>
 </head>
 <body>
-    <h1>Project Starter</h1>
+    <main class="container">
+        <div class="panel active" style="background-image: url('https://images.unsplash.com/photo-1668613966556-f62380c95d2e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=988&q=80')">
+            <h3>Explore the world</h3>
+        </div>
+        <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1668680828441-a4e75575a248?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80')">
+            <h3>Mountains</h3>
+        </div>
+        <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1603552875457-b53162e34fd2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80')">
+            <h3>Forrest</h3>
+        </div>
+        <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1519046904884-53103b34b206?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2370&q=80')">
+            <h3>Beach</h3>
+        </div>
+        <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1486496146582-9ffcd0b2b2b7?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2370&q=80')">
+            <h3>Snowy Cabin</h3>
+        </div>
+    </main>
+
+
 
     <!-- connected script -->
     <script src="script.js"></script>
